Eulerian and minor cleaning up